--- a/partials/about.html
+++ b/partials/about.html
@@ -1,246 +1,92 @@
-<div class="container">
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
 
-    <div class="row">
-
-        <div class="col-lg-12">
-            <h1 class="page-header">About
-                <small>It's Nice to Meet You!</small>
-            </h1>
-            <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a>
-                </li>
-                <li class="active">About</li>
-            </ol>
+        <a href="#" class="brand-logo center">bridge</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#/">Home</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a href="#/post">Post</a></li>
+          <li class="l_i"><a href="#/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+        </ul>
+        <ul class="left hide-on-med-and-down">
+          <li><a href="#/contact">Contact</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#/">Home</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a href="#/post">Post</a></li>
+          <li class="l_i"><a href="#/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li class="divider"></li>
+          <li><a href="#/contact">Contact</a></li>
+          <li><a href="#/about">Contact</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </div>
+  <div id="register_modal" class="modal">
+    <div class="modal-content">
+      <h4 >Register</h4>
+      <div class="divider"></div>
+      <p></p>
+      <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="regemail" type="email" class="validate">
+            <label for="regemail" data-error="Invalid">Email</label>
+          </div>
         </div>
-
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="regpass" type="password" class="validate">
+            <label for="regpass">Password</label>
+          </div>
+        </div>
+      </form>
     </div>
-
-    <div class="row">
-
-        <div class="col-md-6">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-        </div>
-        <div class="col-md-6">
-            <h2>Welcome to 'Modern Business'</h2>
-
-            <p>This is a great place to introduce your company or project and describe what you do. This about page
-                features general company information, employee bios, and other helpful elements.</p>
-
-            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats
-                vitaes nemo minima rerums unsers sadips amets.. Sed ut perspiciatis unde omnis iste natus error sit
-                voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
-                voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-                voluptatem sequi nesciunt.</p>
-        </div>
-
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="register" href="#" class=" modal-action waves-effect waves-green btn">Register</a>
     </div>
+  </div>
+  <div id="login_modal" class="modal">
+    <div class="modal-content">
+      <h4>Log In</h4>
+      <div class="divider"></div>
+      <p></p>
+      <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      <form class="col s12">
 
-    <!-- Team Member Profiles -->
-
-    <div class="row">
-
-        <div class="col-lg-12">
-            <h2 class="page-header">Our Team</h2>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="logemail" type="email" class="validate">
+            <label for="logemail" data-error="Invalid">Email</label>
+          </div>
         </div>
-
-        <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-
-            <h3>John Smith
-                <small>Job Title</small>
-            </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
-                </li>
-            </ul>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="logpass" type="password" class="validate">
+            <label for="logpass">Password</label>
+          </div>
         </div>
-
-        <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-
-            <h3>John Smith
-                <small>Job Title</small>
-            </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-
-            <h3>John Smith
-                <small>Job Title</small>
-            </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-
-            <h3>John Smith
-                <small>Job Title</small>
-            </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-
-            <h3>John Smith
-                <small>Job Title</small>
-            </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-sm-4">
-            <img class="img-responsive" src="http://placehold.it/750x450">
-
-            <h3>John Smith
-                <small>Job Title</small>
-            </h3>
-            <p>What does this team member do? Keep it short! This is also a great spot for social links!</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-profile" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a>
-                </li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-profile" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a>
-                </li>
-            </ul>
-        </div>
-
+      </form>
     </div>
-
-    <!-- Our Customers -->
-
-    <div class="row">
-
-        <div class="col-lg-12">
-            <h2 class="page-header">Our Customers</h2>
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
-        <div class="col-md-2 col-sm-4 col-xs-6">
-            <img class="img-responsive img-customer" src="http://placehold.it/500x300">
-        </div>
-
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="login" href="#" class=" modal-action waves-effect waves-green btn">Log In</a>
     </div>
-
-</div>
-<!-- /.container -->
+  </div>
+  <div class="container">
+      About
+  </div>
