--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,96 +1,92 @@
-<!-- Page Content -->
-<div class="container">
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
 
-    <div class="row">
-
-        <div class="col-lg-12">
-            <h1 class="page-header">Contact
-                <small>We'd Love to Hear From You!</small>
-            </h1>
-            <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li class="active">Contact</li>
-            </ol>
+        <a href="#" class="brand-logo center">bridge</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#/">Home</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a href="#/post">Post</a></li>
+          <li class="l_i"><a href="#/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+        </ul>
+        <ul class="left hide-on-med-and-down">
+          <li><a href="#/contact">Contact</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#/">Home</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a href="#/post">Post</a></li>
+          <li class="l_i"><a href="#/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li class="divider"></li>
+          <li><a href="#/contact">Contact</a></li>
+          <li><a href="#/about">Contact</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </div>
+  <div id="register_modal" class="modal">
+    <div class="modal-content">
+      <h4 >Register</h4>
+      <div class="divider"></div>
+      <p></p>
+      <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="regemail" type="email" class="validate">
+            <label for="regemail" data-error="Invalid">Email</label>
+          </div>
         </div>
-
-        <div class="col-lg-12">
-            <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
-            <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-                    src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="regpass" type="password" class="validate">
+            <label for="regpass">Password</label>
+          </div>
         </div>
-
+      </form>
     </div>
-    <!-- /.row -->
-
-    <div class="row">
-
-        <div class="col-sm-8">
-            <h3>Let's Get In Touch!</h3>
-
-            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats
-                vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit
-                voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-
-            <form role="form" method="POST" action="#">
-                <div class="row">
-                    <div class="form-group col-lg-4">
-                        <label for="input1">Name</label>
-                        <input type="text" name="contact_name" class="form-control" id="input1">
-                    </div>
-                    <div class="form-group col-lg-4">
-                        <label for="input2">Email Address</label>
-                        <input type="email" name="contact_email" class="form-control" id="input2">
-                    </div>
-                    <div class="form-group col-lg-4">
-                        <label for="input3">Phone Number</label>
-                        <input type="phone" name="contact_phone" class="form-control" id="input3">
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="form-group col-lg-12">
-                        <label for="input4">Message</label>
-                        <textarea name="contact_message" class="form-control" rows="6" id="input4"></textarea>
-                    </div>
-                    <div class="form-group col-lg-12">
-                        <input type="hidden" name="save" value="contact">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <div class="col-sm-4">
-            <h3>Modern Business</h3>
-            <h4>A Start Bootstrap Template</h4>
-
-            <p>
-                5555 44th Street N.<br>
-                Bootstrapville, CA 32323<br>
-            </p>
-
-            <p><i class="fa fa-phone"></i> <abbr title="Phone">P</abbr>: (555) 984-3600</p>
-
-            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a
-                    href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a></p>
-
-            <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
-            <ul class="list-unstyled list-inline list-social-icons">
-                <li class="tooltip-social facebook-link"><a href="#facebook-page" data-toggle="tooltip"
-                                                            data-placement="top" title="Facebook"><i
-                        class="fa fa-facebook-square fa-2x"></i></a></li>
-                <li class="tooltip-social linkedin-link"><a href="#linkedin-company-page" data-toggle="tooltip"
-                                                            data-placement="top" title="LinkedIn"><i
-                        class="fa fa-linkedin-square fa-2x"></i></a></li>
-                <li class="tooltip-social twitter-link"><a href="#twitter-profile" data-toggle="tooltip"
-                                                           data-placement="top" title="Twitter"><i
-                        class="fa fa-twitter-square fa-2x"></i></a></li>
-                <li class="tooltip-social google-plus-link"><a href="#google-plus-page" data-toggle="tooltip"
-                                                               data-placement="top" title="Google+"><i
-                        class="fa fa-google-plus-square fa-2x"></i></a></li>
-            </ul>
-        </div>
-
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="register" href="#" class=" modal-action waves-effect waves-green btn">Register</a>
     </div>
-    <!-- /.row -->
+  </div>
+  <div id="login_modal" class="modal">
+    <div class="modal-content">
+      <h4>Log In</h4>
+      <div class="divider"></div>
+      <p></p>
+      <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      <form class="col s12">
 
-</div><!-- /.container -->
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="logemail" type="email" class="validate">
+            <label for="logemail" data-error="Invalid">Email</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="logpass" type="password" class="validate">
+            <label for="logpass">Password</label>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="login" href="#" class=" modal-action waves-effect waves-green btn">Log In</a>
+    </div>
+  </div>
+  <div class="container">
+      Contact
+  </div>
