--- a/partials/home.html
+++ b/partials/home.html
@@ -1,210 +1,158 @@
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper">
 
-<div id="myCarousel" class="carousel slide">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Specialists');"></div>
-            <div class="carousel-caption">
-                <h1>Reduce costs of finishing operations by 65%</h1>
-            </div>
+        <a href="#" class="brand-logo center">bridge</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#/">Home</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a href="#/post">Post</a></li>
+          <li class="l_i"><a href="#/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+        </ul>
+        <ul class="left hide-on-med-and-down">
+          <li><a href="#/contact">Contact</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#/">Home</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#login_modal">Log In</a></li>
+          <li class="l_o"><a class="modal-trigger" href="#register_modal">Register</a></li>
+          <li class="l_i"><a href="#/post">Post</a></li>
+          <li class="l_i"><a href="#/profile">Profile</a></li>
+          <li class="l_i logout"><a href="#">Log Out</a></li>
+          <li class="divider"></li>
+          <li><a href="#/contact">Contact</a></li>
+          <li><a href="#/about">Contact</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </div>
+  <div id="register_modal" class="modal">
+    <div class="modal-content">
+      <h4 >Register</h4>
+      <div class="divider"></div>
+      <p></p>
+      <p id="regtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="regemail" type="email" class="validate">
+            <label for="regemail" data-error="Invalid">Email</label>
+          </div>
         </div>
-        <div class="item">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Wordlwide');"></div>
-            <div class="carousel-caption">
-                <h1>International Buyer Financing Available</h1>
-            </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="regpass" type="password" class="validate">
+            <label for="regpass">Password</label>
+          </div>
         </div>
-        <div class="item">
-            <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Since 1910');"></div>
-            <div class="carousel-caption">
-                <h1>Family Owned for Four Generations</h1>
-            </div>
-        </div>
+      </form>
     </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="icon-prev"></span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="icon-next"></span>
-    </a>
-</div>
-
-<div class="section">
-
-    <div class="container">
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="register" href="#" class=" modal-action waves-effect waves-green btn">Register</a>
+    </div>
+  </div>
+  <div id="login_modal" class="modal">
+    <div class="modal-content">
+      <h4>Log In</h4>
+      <div class="divider"></div>
+      <p></p>
+      <p id="logtitle" class="red-text">There was an error. Consider revising and try again.</p>
+      <form class="col s12">
 
         <div class="row">
-            <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-check-circle"></i> Bootstrap 3 Built</h3>
-                <p>The 'Modern Business' website template by <a href="http://startbootstrap.com">Start Bootstrap</a> is built with <a href="http://getbootstrap.com">Bootstrap 3</a>. Make sure you're up to date with latest Bootstrap documentation!</p>
-            </div>
-            <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-pencil"></i> Ready to Style &amp; Edit</h3>
-                <p>You're ready to go with this pre-built page structure, now all you need to do is add your own custom stylings! You can see some free themes over at <a href="http://bootswatch.com">Bootswatch</a>, or come up with your own using <a href="http://getbootstrap.com/customize/">the Bootstrap customizer</a>!</p>
-            </div>
-            <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-folder-open"></i> Many Page Options</h3>
-                <p>This template features many common pages that you might see on a business website. Pages include: about, contact, portfolio variations, blog, pricing, FAQ, 404, services, and general multi-purpose pages.</p>
-            </div>
+          <div class="input-field col s12">
+            <i class="material-icons prefix">email</i>
+            <input id="logemail" type="email" class="validate">
+            <label for="logemail" data-error="Invalid">Email</label>
+          </div>
         </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section -->
-
-<div class="section-colored text-center">
-
-    <div class="container">
-
         <div class="row">
-            <div class="col-lg-12">
-                <h2>Modern Business: A Clean &amp; Simple Full Website Template by Start Bootstrap</h2>
-                <p>A complete website design featuring various single page templates from Start Bootstraps library of free HTML starter templates.</p>
-                <hr>
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input id="logpass" type="password" class="validate">
+            <label for="logpass">Password</label>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+      <a id="login" href="#" class=" modal-action waves-effect waves-green btn">Log In</a>
+    </div>
+  </div>
+  <div class="container">
+    <p></p>
+    <div class="row">
+      <div class="input-field col s12">
+        <i class="material-icons prefix">search</i>
+        <input id="icon_prefix"ng-model="searchText"type="text" class="validate">
+        <label for="icon_prefix">Search Events...</label>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col s12 m6" ng-repeat="post in posts | filter:searchText">
+            <div class="card">
+                <div class="card-image">
+                    <img src="{{ post.picture }}">
+                    <span class="card-title">{{ post.title }}</span>
+                </div>
+                <div class="card-content">
+                    <ul class="collection">
+                        <li class="collection-item">
+                            <div>
+                                By <b>{{ post.author }}</b>
+                                <span class="secondary-content">
+                                    <i class="material-icons">account_circle</i>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="collection-item">
+                            <div>
+                                <i>{{ post.date }}</i>
+                                <span class="secondary-content">
+                                    <i class="material-icons">label</i>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="collection-item">
+                            <div>
+                                <span class="secondary-content">
+                                    <i class="material-icons">today</i>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="collection-item">
+                            <div>
+                                <a target="_blank" href="https://www.google.com/maps/place/{{ post.location }}">
+                                    {{ post.location }}
+                                </a>
+                                <span class="secondary-content">
+                                    <i class="material-icons">location_on</i>
+                                </span>
+                            </div>
+                        </li>
+                        <li class="collection-item">
+                            <div>
+                                {{ post.description }} 
+                                <span class="secondary-content">
+                                    <i class="material-icons">subject</i>
+                                </span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-action">
+                    <a href="{{ post.link }}" target="_blank">Join</a>
+                </div>
             </div>
         </div>
-        <!-- /.row -->
 
     </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section-colored -->
-
-<div class="section">
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>Display Some Work on the Home Page Portfolio</h2>
-                <hr>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450">
-                </a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450">
-                </a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450">
-                </a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450">
-                </a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450">
-                </a>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-home-portfolio" src="http://placehold.it/700x450">
-                </a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section -->
-
-<div class="section-colored">
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <h2>Modern Business Features Include:</h2>
-                <ul>
-                    <li>Bootstrap 3 Framework</li>
-                    <li>Mobile Responsive Design</li>
-                    <li>Predefined File Paths</li>
-                    <li>Working PHP Contact Page</li>
-                    <li>Minimal Custom CSS Styles</li>
-                    <li>Unstyled: Add Your Own Style and Content!</li>
-                    <li>Font-Awesome fonts come pre-installed!</li>
-                    <li>100% <strong>Free</strong> to Use</li>
-                    <li>Open Source: Use for any project, private or commercial!</li>
-                </ul>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <img class="img-responsive" src="http://placehold.it/700x450/ffffff/cccccc">
-            </div>
-        </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section-colored -->
-
-<div class="section">
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <img class="img-responsive" src="http://placehold.it/700x450">
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6">
-                <h2>Modern Business Features Include:</h2>
-                <ul>
-                    <li>Bootstrap 3 Framework</li>
-                    <li>Mobile Responsive Design</li>
-                    <li>Predefined File Paths</li>
-                    <li>Working PHP Contact Page</li>
-                    <li>Minimal Custom CSS Styles</li>
-                    <li>Unstyled: Add Your Own Style and Content!</li>
-                    <li>Font-Awesome fonts come pre-installed!</li>
-                    <li>100% <strong>Free</strong> to Use</li>
-                    <li>Open Source: Use for any project, private or commercial!</li>
-                </ul>
-            </div>
-        </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-</div>
-<!-- /.section -->
-
-<div class="container">
-
-    <div class="row well">
-        <div class="col-lg-8 col-md-8">
-            <h4>'Modern Business' is a ready-to-use, Bootstrap 3 updated, multi-purpose HTML theme!</h4>
-            <p>For more templates and more page options that you can integrate into this website template, visit Start Bootstrap!</p>
-        </div>
-        <div class="col-lg-4 col-md-4">
-            <a class="btn btn-lg btn-primary pull-right" href="http://startbootstrap.com">See More Templates!</a>
-        </div>
-    </div>
-    <!-- /.row -->
-
-</div>
-<!-- /.container -->
+  </div>
